

MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
		- added displacement-only nodes and selected basic elements
		- added membrane element (Marco Morandini & Tommaso Solcia)
		- added continuous contact constitutive law (Matteo Fancello)
		- added inverse dynamics body for weight tailoring
		- added "other" specifier to total pin joint input
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
	Bug fixes:
		- fix output file name ext. issue (noted by Jens van Schelve)
		- fix totalj rel. rot. priv data (noted by Jens van Schelve)
		- fix beam default output (noted by Reinhard Resch)
		- fix linear/angular acceleration joint initialization

MBDyn 1.4.3
	Enhancements:
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
	Bug fixes:
		- fix build with RTAI support
		- fix build with g++ < 4.5 (noted by Reinhard Resch)

MBDyn 1.4.2
	Enhancements:
		- added simple hydraulic damper model (Giuseppe Quaranta)
		- added Hunt-Crossley impact model (Matteo Fancello)
		- added private data to generic aerodynamic force
		- added 'array' constitutive law wrapper
		- added generic 'bistop' constitutive law wrapper
		- added 'imu' and 'imu constraint' user-defined elements
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
	Bug fixes:
		- fix structural nodes accel output (Reinhard Resch)
		- fix variable mass body (noted by Francesco Castellini)
		- fix 'use binary' in modal joint
		- fix bug in deformable axial joint residual
		- fix driven aerodynamic elements (noted by Phil Geoghegan)
		- fix total(pin)joint when orientations are partially imposed
		- fix struct node accels during update (noted by Camille Yvin)