@@ -148,10 +148,10 @@ protected:
 
 		PRINT_NODE_CONNECTION	= 0x10U,
 		PRINT_EL_CONNECTION	= 0x20U,
-		PRINT_CONNECTION	= (PRINT_NODE_CONNECTION|PRINT_EL_CONNECTION)
+		PRINT_CONNECTION	= (PRINT_NODE_CONNECTION|PRINT_EL_CONNECTION),
+		PRINT_TO_FILE = 0x40U
 	};
 	unsigned uPrintFlags;
-
 	/* Parametri vari */
 	char* sSimulationTitle;
 
